<resources>
    <string name="app_name">Businga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="tab_text_1">Tracker</string>
    <string name="tab_text_2">Notification</string>
    <string name="tab_text_3">Poll</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="businga">BUSINGA</string>
    <string name="home">Home</string>
    <string name="nav_account">My account</string>
    <string name="time_table">Bus time table</string>
    <string name="imp_contacts">Important contacts</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About us</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="tab_4">Complaint</string>
</resources>