<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/gid1">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/gid2">
        <item
            android:id="@+id/time_table"
            android:icon="@drawable/ic_directions_transit_black_24dp"
            android:title="@string/time_table" />
        <item
            android:id="@+id/holiday_list"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="Holiday List" />
        <item
            android:id="@+id/imp_contacts"
            android:icon="@drawable/contact"
            android:title="@string/imp_contacts" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/gid3">
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>